--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -6,7 +6,7 @@
     @extend %list-reset;
     line-height: 1;
     transition: transform 0.4s ease-in-out;
-    top: 106px;
+    top: 6rem;
     left: -100%;
     bottom: 0;
     width: 100%;
@@ -17,7 +17,6 @@
         position: fixed;
         transform: translateX(0);
         background-color: $colour-white;
-
 
         @media ( min-width: $tablet ) {
             position: static;
